feat(App) Add navigation structure and metadata

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.12.1/css/all.css"
+      integrity="sha384-TxKWSXbsweFt0o2WqfkfJRRNVaPdzXJ/YLqgStggBVRREXkwU7OKz+xXtqOU4u8+"
+      crossorigin="anonymous"
+    />
     <title>Cutremur '77</title>
   </head>
   <body>
